# openharmony-continuous-snapshot

./: .gitignore  build-profile.json5  native_report.md  oh-package.json5  prompt.md  report_extracted.txt
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: build-profile.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  napi_init.c  napi_init.cpp  screen_recorder_native.c  screen_recorder_native.cpp  screen_recorder_native.h
entry/src/main/cpp/types/libentry/: Index.d.ts  oh-package.json5
entry/src/main/cpp/types/libscreen_recorder/: index.d.ts  oh-package.json5
entry/src/main/ets/pages/: Index.ets
entry/src/main/ets/utils/: NativeScreenRecorder.ets  ScreenRecorderManager.ets  VirtualScreenManager.ets
entry/src/main/resources/base/element/: string.json
